# vla

./: .gitignore  README.md  requirements.txt
vla_latest/: add_comment_to_cs.py  controllers.py  geometry.py  gui.py  gui_frame_traj.py  main.py  main_demo.py  main_directional.py  main_park.py  main_pid_traj.py  navigation_controller.py  ocr_paddle.py  ocr_processor.py  ocr_processor_llm.py  ocr_processor_llm2.py  ollama_check.py  ollama_test.py  parking_finder.py  path_planner.py  region_manager.py  task_types.py  vla_task_controller.py
vla_latest/autodrive_api_python-1.0.0/: .gitignore  LICENSE  README.md  pyproject.toml
vla_latest/autodrive_api_python-1.0.0/docs/: conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  vla.rst
vla_latest/autodrive_api_python-1.0.0/docs/api/: geometry.rst  index.rst  models.rst  scene.rst
vla_latest/autodrive_api_python-1.0.0/examples/: main.py  requirements.txt
vla_latest/autodrive_api_python-1.0.0/metacar/: __init__.py  geometry.py  models.py  sceneapi.py  sockets.py
vla_latest/config/: arch_config.yaml
vla_latest/docs/: parking_ocr_parking_violation_usage.md
vla_latest/infer/: predict_cls.py  predict_det.py  predict_rec.py  predict_system.py  pytorchocr_utility.py
vla_latest/models/: ppocrv3_dict.txt
vla_latest/perception/: vehicle_number_detector.py
vla_latest/planning/: parking_violation_checker.py
vla_latest/pytorchocr/: base_ocr_v20.py  pytorch_paddle.py
vla_latest/tests/: test_parking_violation_checker.py  test_region_manager.py  test_vehicle_number_detector.py
(+5 files in other folders)
